Fix overflow editor issue

--- a/frontend/src/views/collaboration-page/CollaborationPage.module.css
+++ b/frontend/src/views/collaboration-page/CollaborationPage.module.css
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    
 }
 
 .editorContainer {
@@ -21,6 +22,7 @@
     color: white;
     height: 100%;
     border-radius: 8px; 
+    overflow-x: auto;
 }
 
 .toolbar {
